--- a/dlbp_web/template/uploading.html
+++ b/dlbp_web/template/uploading.html
@@ -1,6 +1,6 @@
 
 {% for img in imgs %}
-<img src="{{ img.1 }}">{{ img.0 }} {{ img.2 }}</img>
+<img src="{{ img.1 }}" style="width:224px;height:224px">{{ img.0 }} {{ img.2 }}</img>
 {% endfor %}
 
 <form method="POST" enctype="multipart/form-data">
