--- a/dlbp_web/template/uploading.html
+++ b/dlbp_web/template/uploading.html
@@ -1,8 +1,8 @@
 
 {% for img in imgs %}
 <img src="{{ img.1 }}" style="width:224px;height:224px">
-{% ifequal img.0 sk_id %} <font style="position:relative; z-index:2; left:-100px; top:-40px;color:green"> {% endifequal %}
-{% ifnotequal img.0 sk_id %} <font style="position:relative; z-index:2; left:-100px; top:-40px;color:red"> {% endifnotequal %}
+{% ifequal img.0 sk_id %} <font style="position:relative; z-index:2; left:-190px; top:-20px;color:green;font-size:32"> {% endifequal %}
+{% ifnotequal img.0 sk_id %} <font style="position:relative; z-index:2; left:-190px; top:-20px;color:red;font-size:32"> {% endifnotequal %}
 {{ img.0 }} {{ img.2 }}
 </font>
 {% endfor %}
