--- a/dlbp_web/template/uploading.html
+++ b/dlbp_web/template/uploading.html
@@ -1,6 +1,6 @@
 
-<img src='{{test_img}}' style="width:224px;height:224px">
-{% for img in imgs %}<font style="position:relative; z-index:2; left:-190px; top:-20px;color:green;font-size:32">{{f_name}}</font>
+<img src='{{test_img}}' style="width:224px;height:224px"><font style="position:relative; z-index:2; left:-190px; top:-20px;color:green;font-size:32">{{f_name}}</font>
+{% for img in imgs %}
 <img src="{{ img.1 }}" style="width:224px;height:224px">
 {% ifequal img.0 sk_id %} <font style="position:relative; z-index:2; left:-190px; top:-20px;color:green;font-size:32"> {% endifequal %}
 {% ifnotequal img.0 sk_id %} <font style="position:relative; z-index:2; left:-190px; top:-20px;color:red;font-size:32"> {% endifnotequal %}
