--- a/dlbp_web/template/uploading.html
+++ b/dlbp_web/template/uploading.html
@@ -1,5 +1,5 @@
 
-<img src='{{test_img}}' style="width:224px;height:224px"><font style="position:relative; z-index:2; left:-210px; top:-20px;color:greenyellow;font-size:16">{{f_name}}</font>
+<img src='{{test_img}}' style="width:224px;height:224px"><font style="position:relative; z-index:2; left:-190px; top:-20px;color:black;font-size:16">{{f_name}}</font>
 {% for img in imgs %}
 <img src="{{ img.1 }}" style="width:224px;height:224px">
 {% ifequal img.0 sk_id %} <font style="position:relative; z-index:2; left:-210px; top:-20px;color:greenyellow;font-size:16"> {% endifequal %}
